--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
 	<div>
 		<header class="header" id="header" style="background-image: url(images/backgrounds/header-background.jpg);">
 			<div class="header-top">
-				<a href="/" class="header-top-logo">
+				<a href="index.html" class="header-top-logo">
 					<img src="images/logo.svg" alt="S&Mitler" width="125" height="25">
 				</a>
 				<p class="header-top-phone">+380-00-000-00-00</p>
