--- a/app/services.html
+++ b/app/services.html
@@ -18,7 +18,7 @@
 			<div class="container">
 				<div class="secondary-mobile-button"></div>
 				<div class="secondary-header-top-inner">
-					<a href="/" class="secondary-header-logo">
+					<a href="index.html" class="secondary-header-logo">
 						<img src="images/logo.svg" alt="S&Mitler" width="125" height="25">
 					</a>
 					<nav class="secondary-header-nav">
